SERVER-9973 Allow creating NumberLong from anything that supports toNumber